--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,8 @@
 
     <string name="app_name">Ribbit</string>
     <string name="action_settings">Settings</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section1">Inbox</string>
+    <string name="title_section2">Friends</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="username_hint">Username</string>
@@ -20,5 +19,10 @@
     <string name="login_error_message">Please make sure you enter a username and password!</string>
     <string name="login_error_title">Drat!</string>
     <string name="menu_logout_label">Logout</string>
+    <string name="empty_inbox_label">No new messages!</string>
+    <string name="empty_friends_label">Add friends to begin!</string>
+    <string name="edit_friends_label">Edit friends</string>
+    <string name="title_activity_edit_friends">Edit Friends</string>
+    <string name="error_title">"We're sorry!</string>
 
 </resources>
