--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="signUp_hint">Don\'t have an account? Sign up!</string>
     <string name="sign_up_activity">SignUpActivity</string>
     <string name="email_hint">Email</string>
-    <string name="sign_up_button_label">Sign Up</string>
+    <string name="sign_up_button_label">SIGN UP</string>
     <string name="signup_error_message">Please make sure you enter a username, password and email address!</string>
     <string name="signup_error_title">Drat!</string>
     <string name="login_error_message">Please make sure you enter a username and password!</string>
